@@ -219,6 +219,7 @@ The following people are not part of the development team, but have been contrib
 * Joel H. (HtotheTML)
 * John Mulcahy (jayjay300)
 * Chase Percy (Chase-Percy)
+* Wenzhao Qiu (qwzhaox)
 
 ## Toolchain
 * (Balletie) - macOS
